--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 
     <header class="page-header">
       <a class="page-header__logo" href="#">
-        <img class="page-header__logo-image" src="" width="100" height="19" alt="логотип сервиса "Погнали"">
+        <img class="page-header__logo-image" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -44,9 +44,10 @@
           «Лучшее приложение, что я видел в жизни!»
         </p>
         <p class="review__author text-bold">
-          Мурат Эльтазинглавный редактор газеты «гаджетлайф»
+          Мурат Эльтазин главный редактор газеты «гаджетлайф»
         </p>
       </section>
+
       <section class="action-plan">
         <h2 class="visually-hidden">План действий</h2>
         <div class="action-plan__wrapper">
@@ -66,9 +67,10 @@
           </ul>
         </div>
       </section>
+
       <section class="service-info">
-        <h2 class="service-info__title">О сервисе</h2>
-        <p class="service-info__text tex-light">
+        <h2 class="service-info__title h2-main">О сервисе</h2>
+        <p class="service-info__text text-light">
           Любое путешествие веселее с попутчиками, которые на одной волне с тобой!
           Делитесь своими идеями путешествий и черпайте вдохновение в чужих.
         </p>
@@ -76,6 +78,71 @@
           А если найдете кого-то близкого по духу — скорее зовите в совместный трип!
         </p>
       </section>
+
+      <section class="popular-route">
+        <h2 class="popular-route__title h2-main">Направления</h2>
+        <p class="popular-route__text text-light">
+          Мы не продаем туры
+          и ничего не рекламируем.
+          Люди сами пишут о странах, куда хотели бы отправиться
+          и чем можно там заняться.
+        </p>
+        <ul class="popular-route__list">
+          <li class="popular-route__item popular-route__item--thai">
+            <h3 class="popular-route__item-title">Тайланд</h3>
+            <p class="popular-route__item-discription">Джугли зовут!</p>
+          </li>
+          <li class="popular-route__item popular-route__item--france">
+            <h3 class="popular-route__item-title">Франция</h3>
+            <p class="popular-route__item-discription">Трэ бьен, манифик!</p>
+          </li>
+          <li class="popular-route__item popular-route__item--czech">
+            <h3 class="popular-route__item-title">Чехия</h3>
+            <p class="popular-route__item-discription">Закоулки старой Европы</p>
+          </li>
+        </ul>
+        <a class="popular-route__show-all button" href="#">Показать все</a>
+      </section>
+
+      <section class="companion">
+        <h2 class="companion__title h2-main">Попутчики</h2>
+        <p class="companion__text text-light">
+          Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.
+        </p>
+        <p class="companion__text text-bold">
+          Теперь можно легко найти единомышленников!
+        </p>
+        <ul class="companion__list">
+          <li class="companion__item companion__item--first">
+            <h3 class="companion__item-title">Таня Фирсова</h3>
+            <p class="companion__item-discription">
+              #ЗОЖ #ПП #Фитнес #пляж
+              #авокадо #смузи
+            </p>
+            <div class="transport">
+              <span class="transport__icon transport__icon--plane"></span>
+              <span class="transport__icon transport__icon--bus"></span>
+              <span class="transport__icon transport__icon--bicycle"></span>
+              <span class="transport__icon transport__icon--run"></span>
+            </div>
+          </li>
+          <li class="companion__item companion__item--second">
+            <h3 class="companion__item-title">Петя Демин</h3>
+            <p class="companion__item-discription">
+              #бургер #бар #футбол
+              #концерт #крафт
+            </p>
+            <div class="transport">
+              <span class="transport__icon transport__icon--plane"></span>
+              <span class="transport__icon transport__icon--bus"></span>
+              <span class="transport__icon transport__icon--bicycle"></span>
+              <span class="transport__icon transport__icon--run"></span>
+            </div>
+          </li>
+        </ul>
+        <a class="companion__show-all button" href="#">Показать всех</a>
+      </section>
+
     </main>
   </body>
 </html>
