исправлена опечатка в каталоге

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -130,7 +130,7 @@
             </p>
             <p class="companion-item__text">хочет посетить:</p>
             <ul class="companion-item__wish-list countries-list">
-              <li class="countries__item countries__item--usa">США/li>
+              <li class="countries__item countries__item--usa">США</li>
               <li class="countries__item countries__item--australia">Австралия</li>
               <li class="countries__item countries__item--dominican">Доминикана</li>
             </ul>
