Корректировка в именах классов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="inner-page-header">
-      <div class="page-header__logo-wrapper logo-wrapper">
+      <div class="page-header__logo-wrapper logo">
         <a class="logo__link" href="index.html">
           <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
@@ -15,7 +15,7 @@
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
-          <div class="menu__logo logo-wrapper">
+          <div class="main-nav__logo-wrapper logo">
             <a class="logo__link" href="index.html">
               <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
@@ -66,47 +66,47 @@
 
       <section class="inner-companions">
         <ul class="inner-companions__list">
-          <li class="inner-companion__item companion__item--first">
-            <div class="companion-avatar-name__wrapper">
-              <img src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
-              <h3 class="companion-item__name">Таня Фирсова</h3>
-              <p class="companion-item__subscribers">1,5 м</p>
+          <li class="inner-companion__item--first">
+            <div class="inner-companion__wrapper">
+              <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
+              <h3 class="inner-companion-item__name">Таня Фирсова</h3>
+              <p class="inner-companion-item__subscribers">1,5 м</p>
             </div>
-            <p class="companion-item__tags">
+            <p class="inner-companion-item__tags">
               #ЗОЖ #ПП #Фитнес #пляж
               #авокадо #смузи
             </p>
-            <p class="companion-item__text">хочет посетить:</p>
-            <ul class="companion-item__wish-list countries-list">
-              <li class="countries__item countries__item--shrilanka">Шри ланка</li>
-              <li class="countries__item countries__item--thai">Тайланд</li>
-              <li class="countries__item countries__item--seychelles">Сейшелы</li>
+            <p class="inner-companion-item__text">хочет посетить:</p>
+            <ul class="inner-companion-item__wish-list countries-list">
+              <li class="inner-countries__item countries__item--shrilanka">Шри ланка</li>
+              <li class="inner-countries__item countries__item--thai">Тайланд</li>
+              <li class="inner-countries__item countries__item--seychelles">Сейшелы</li>
             </ul>
-            <p class="companion-item__text">транспорт:</p>
+            <p class="inner-companion-item__text">транспорт:</p>
             <div class="transport">
               <span class="transport__icon transport__icon--plane transport__icon--active">Самолет</span>
               <span class="transport__icon transport__icon--bus">Автобус</span>
               <span class="transport__icon transport__icon--bicycle">На велосипеде</span>
               <span class="transport__icon transport__icon--walk">Пешком</span>
             </div>
-            <p class="companion-item__text">левел:</p>
-            <p class="companion-item__level">99</p>
-            <button class="invite-button" type="button">Позвать!</button>
+            <p class="inner-companion-item__text">левел:</p>
+            <p class="inner-companion-item__level">99</p>
+            <button class="inner-companion__invite-button" type="button">Позвать!</button>
           </li>
           <li class="inner-companion__item companion__item--second">
-            <div class="companion-avatar-name__wrapper">
-              <img src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
-              <h3 class="companion-item__name">Петя Демин</h3>
-              <p class="companion-item__subscribers">150</p>
+            <div class="inner-companion-avatar-name__wrapper">
+              <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
+              <h3 class="inner-companion-item__name">Петя Демин</h3>
+              <p class="inner-companion-item__subscribers">150</p>
             </div>
-            <p class="companion-item__tags">
+            <p class="inner-companion-item__tags">
               #бургер #бар #футбол
               #концерт #крафт
             </p>
-            <p class="companion-item__text">хочет посетить:</p>
-            <ul class="companion-item__wish-list countries-list">
-              <li class="countries__item countries__item--belgium">Бельгия</li>
-              <li class="countries__item countries__item--czech">Чехия</li>
+            <p class="inner-companion-item__text">хочет посетить:</p>
+            <ul class="inner-companion-item__wish-list countries-list">
+              <li class="inner-countries__item countries__item--belgium">Бельгия</li>
+              <li class="inner-countries__item countries__item--czech">Чехия</li>
             </ul>
             <p class="companion-item__text">транспорт:</p>
             <div class="transport">
@@ -115,24 +115,24 @@
               <span class="transport__icon transport__icon--bicycle">На велосипеде</span>
               <span class="transport__icon transport__icon--walk transport__icon--active">Пешком</span>
             </div>
-            <p class="companion-item__text">левел:</p>
-            <p class="companion-item__level">80</p>
-            <button class="invite-button" type="button">Позвать!</button>
+            <p class="inner-companion-item__text">левел:</p>
+            <p class="inner-companion-item__level">80</p>
+            <button class="inner-companion__invite-button" type="button">Позвать!</button>
           </li>
           <li class="inner-companion__item companion__item--third">
             <div class="companion-avatar-name__wrapper">
-              <img src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
-              <h3 class="companion-item__name">Марк Смолов</h3>
-              <p class="companion-item__subscribers">1700</p>
+              <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
+              <h3 class="inner-companion-item__name">Марк Смолов</h3>
+              <p class="inner-companion-item__subscribers">1700</p>
             </div>
-            <p class="companion-item__tags">
+            <p class="inner-companion-item__tags">
               #рэп #тату #хайпбист #кроссовки #суприм
             </p>
-            <p class="companion-item__text">хочет посетить:</p>
-            <ul class="companion-item__wish-list countries-list">
-              <li class="countries__item countries__item--usa">США</li>
-              <li class="countries__item countries__item--australia">Австралия</li>
-              <li class="countries__item countries__item--dominican">Доминикана</li>
+            <p class="inner-companion-item__text">хочет посетить:</p>
+            <ul class="inner-companion-item__wish-list countries-list">
+              <li class="inner-countries__item countries__item--usa">США</li>
+              <li class="inner-countries__item countries__item--australia">Австралия</li>
+              <li class="inner-countries__item countries__item--dominican">Доминикана</li>
             </ul>
             <p class="companion-item__text">транспорт:</p>
             <div class="transport">
@@ -141,34 +141,34 @@
               <span class="transport__icon transport__icon--bicycle transport__icon--active">На велосипеде</span>
               <span class="transport__icon transport__icon--walk">Пешком</span>
             </div>
-            <p class="companion-item__text">левел:</p>
-            <p class="companion-item__level">25</p>
-            <button class="invite-button" type="button">Позвать!</button>
+            <p class="inner-companion-item__text">левел:</p>
+            <p class="inner-companion-item__level">25</p>
+            <button class="inner-companion-invite-button" type="button">Позвать!</button>
           </li>
           <li class="inner-companion__item companion__item--first">
             <div class="companion-avatar-name__wrapper">
-              <img src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
-              <h3 class="companion-item__name">Лариса Роговая</h3>
-              <p class="companion-item__subscribers">23</p>
+              <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
+              <h3 class="inner-companion-item__name">Лариса Роговая</h3>
+              <p class="inner-companion-item__subscribers">23</p>
             </div>
-            <p class="companion-item__tags">
+            <p class="inner-companion-item__tags">
               #образование #карьера #учеба #линкедин
             </p>
-            <p class="companion-item__text">хочет посетить:</p>
-            <ul class="companion-item__wish-list countries-list">
-              <li class="countries__item countries__item--uk">Великобритания</li>
-              <li class="countries__item countries__item--germain">Германия</li>
+            <p class="inner-companion-item__text">хочет посетить:</p>
+            <ul class="inner-companion-item__wish-list countries-list">
+              <li class="inner-countries__item countries__item--uk">Великобритания</li>
+              <li class="inner-countries__item countries__item--germain">Германия</li>
             </ul>
-            <p class="companion-item__text">транспорт:</p>
+            <p class="inner-companion-item__text">транспорт:</p>
             <div class="transport">
               <span class="transport__icon transport__icon--plane transport__icon--active">Самолет</span>
               <span class="transport__icon transport__icon--bus transport__icon--active">Автобус</span>
               <span class="transport__icon transport__icon--bicycle">На велосипеде</span>
               <span class="transport__icon transport__icon--walk">Пешком</span>
             </div>
-            <p class="companion-item__text">левел:</p>
-            <p class="companion-item__level">50</p>
-            <button class="invite-button" type="button">Позвать!</button>
+            <p class="inner-companion-item__text">левел:</p>
+            <p class="inner-companion-item__level">50</p>
+            <button class="inner-companion__invite-button" type="button">Позвать!</button>
           </li>
         </ul>
         <a class="inner-companions__show-more" href="catalog.html">Показать еще</a>
@@ -177,8 +177,8 @@
       </section>
     </main>
 
-    <footer class="inner-page-footer">
-      <div class="page-fooger__logo logo-wrapper">
+    <footer class="page-footer">
+      <div class="page-fooger__logo-wrapper logo">
         <a class="logo__link" href="index.html">
           <img class="page-footer__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
