--- a/source/form.html
+++ b/source/form.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="inner-page-header">
-      <div class="page-header__logo-wrapper logo-wrapper">
+      <div class="page-header__logo-wrapper logo">
         <a class="logo__link" href="index.html">
           <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
@@ -15,7 +15,7 @@
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
-          <div class="menu__logo logo-wrapper">
+          <div class="main-nav__logo-wrapper logo">
             <a class="logo__link" href="index.html">
               <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
@@ -62,8 +62,8 @@
       <!-- здесь будут секции с фильтрами -->
     </main>
 
-    <footer class="inner-page-footer">
-      <div class="page-fooger__logo logo-wrapper">
+    <footer class="page-footer">
+      <div class="page-fooger__logo-wrapper logo">
         <a class="logo__link" href="index.html">
           <img class="page-footer__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
