--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <header class="page-header">
-      <div class="page-header__logo-wrapper logo-wrapper">
+      <div class="page-header__logo-wrapper logo">
         <a class="logo__link">
           <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
@@ -15,7 +15,7 @@
       <nav class="main-nav menu">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
-          <div class="menu__logo logo-wrapper">
+          <div class="main-nav__logo-wrapper logo">
             <a class="logo__link">
               <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
@@ -33,7 +33,7 @@
           </ul>
           <a class="link__login auth-button" href="#">Авторизоваться</a>
         </div>
-        <div class="contacts__links">
+        <div class="contacts">
           <a class="contacts__phone" href="tel:+78005558628">
             <span class="contacts__phone--mobile">8 800 555-86-28</span>
           </a>
@@ -61,9 +61,9 @@
       <h1 class="page-main__title">В путешествие с крутыми попутчиками!</h1>
 
       <div class="links">
-        <a class="link__call-us icon icon--call-us" href="#">Свяжитесь с нами</a>
-        <a class="link__write-us icon icon--write-us"  href="#">Напишите нам</a>
-        <a class="link__login auth-button" href="#">Авторизоваться</a>
+        <a class="links__call-us icon icon--call-us" href="#">Свяжитесь с нами</a>
+        <a class="links__write-us icon icon--write-us"  href="#">Напишите нам</a>
+        <a class="links__login auth-button" href="#">Авторизоваться</a>
       </div>
 
       <section class="review">
@@ -223,9 +223,9 @@
       <section class="contacts">
         <h2 class="contacts__title">Заинтересовались?</h2>
         <p class="contacts__text text-light">Зарегистрируйтесь, это быстро и бесплатно! Уже зарегистрированы? Тогда скорее <a class="auth" href="#">авторизуйтесь</a>.</p>
-        <form class="login" action="https://echo.htmlacademy.ru" method="post">
-          <input type="email" name="user-email" placeholder="E-mail">
-          <a class="button-auth" href="#">Переход к авторизации</a>
+        <form class="contacts__login" action="https://echo.htmlacademy.ru" method="post">
+          <input class="contacts__email" type="email" name="user-email" placeholder="E-mail">
+          <a class="contacts__button button-auth" href="#">Переход к авторизации</a>
         </form>
         <p class="contacts__text text-light">Остались вопросы? Мы с радостью на них ответим!</p>
         <div class="contacts__links">
@@ -247,7 +247,7 @@
     </main>
 
     <footer class="page-footer">
-      <div class="page-fooger__logo logo-wrapper">
+      <div class="page-fooger__logo-wrapper logo">
         <a class="logo__link">
           <img class="page-footer__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
         </a>
