Исправление в именах классов

--- a/source/index.html
+++ b/source/index.html
@@ -16,8 +16,8 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <div class="main-nav__logo-wrapper logo">
-            <a class="logo__link">
-              <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+            <a class="main-nav__logo-link logo__link">
+              <img class="main-nav__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
           </div>
           <ul class="main-nav__list site-list">
@@ -117,19 +117,19 @@
         </p>
         <ul class="popular-route__list">
           <li class="popular-route__item popular-route__item--thai">
-            <img class="popular-route__img--thai" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
+            <img class="popular-route__img popular-route__img--thai" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Тайланд</h3>
-            <p class="popular-route__item-discription">Джугли зовут!</p>
+            <p class="popular-route__item-description">Джугли зовут!</p>
           </li>
           <li class="popular-route__item popular-route__item--france">
-            <img class="popular-route__img--france" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
+            <img class="popular-route__img popular-route__img--france" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Франция</h3>
-            <p class="popular-route__item-discription">Трэ бьен, манифик!</p>
+            <p class="popular-route__item-description">Трэ бьен, манифик!</p>
           </li>
           <li class="popular-route__item popular-route__item--czech">
-            <img class="popular-route__img--czech" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
+            <img class="popular-route__img popular-route__img--czech" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Чехия</h3>
-            <p class="popular-route__item-discription">Закоулки старой Европы</p>
+            <p class="popular-route__item-description">Закоулки старой Европы</p>
           </li>
         </ul>
         <a class="popular-route__show-all button" href="#">Показать все</a>
@@ -145,7 +145,7 @@
         </p>
         <ul class="companions__list">
           <li class="companion__item companion__item--first">
-            <img class="companion__img--first" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
+            <img class="companion__img" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
             <h3 class="companion__item-title">Таня Фирсова</h3>
             <p class="companion__item-tags">
               #ЗОЖ #ПП #Фитнес #пляж
@@ -159,7 +159,7 @@
             </div>
           </li>
           <li class="companion__item companion__item--second">
-            <img class="companion__img--second" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
+            <img class="companion__img" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
             <h3 class="companion__item-title">Петя Демин</h3>
             <p class="companion__item-tags">
               #бургер #бар #футбол
