--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,8 +16,8 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <div class="main-nav__logo-wrapper logo">
-            <a class="logo__link" href="index.html">
-              <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+            <a class="main-nav__logo-link logo__link" href="index.html">
+              <img class="main-nav__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
           </div>
           <ul class="main-nav__list site-list">
@@ -197,7 +197,7 @@
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
-        <p class="copyright__text light-text">Разработано</p>
+        <p class="copyright__text">Разработано</p>
         <div class="copyright__logo htmlacademy-logo">
           <a class="htmlacademy-logo__link" href="https://htmlacademy.ru/">
             <img class="htmlacademy-logo__icon" src="http://placehold.it/27x34" width="27" height="34" alt="Логотип HTML Academy">
