--- a/source/form.html
+++ b/source/form.html
@@ -16,8 +16,8 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <div class="main-nav__wrapper">
           <div class="main-nav__logo-wrapper logo">
-            <a class="logo__link" href="index.html">
-              <img class="page-header__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
+            <a class="main-nav__logo-link logo__link" href="index.html">
+              <img class="main-nav__logo-image logo__img" src="http://placehold.it/100x19" width="100" height="19" alt="логотип сервиса Погнали">
             </a>
           </div>
           <ul class="main-nav__list site-list">
