Удалила лишние модификаторы в списках

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,7 +66,7 @@
 
       <section class="inner-companions">
         <ul class="inner-companions__list">
-          <li class="inner-companion__item--first">
+          <li class="inner-companion__item">
             <div class="inner-companion__wrapper">
               <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
               <h3 class="inner-companion-item__name">Таня Фирсова</h3>
@@ -93,7 +93,7 @@
             <p class="inner-companion-item__level">99</p>
             <button class="inner-companion__invite-button" type="button">Позвать!</button>
           </li>
-          <li class="inner-companion__item companion__item--second">
+          <li class="inner-companion__item companion__item">
             <div class="inner-companion-avatar-name__wrapper">
               <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
               <h3 class="inner-companion-item__name">Петя Демин</h3>
@@ -119,7 +119,7 @@
             <p class="inner-companion-item__level">80</p>
             <button class="inner-companion__invite-button" type="button">Позвать!</button>
           </li>
-          <li class="inner-companion__item companion__item--third">
+          <li class="inner-companion__item companion__item">
             <div class="companion-avatar-name__wrapper">
               <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
               <h3 class="inner-companion-item__name">Марк Смолов</h3>
@@ -145,7 +145,7 @@
             <p class="inner-companion-item__level">25</p>
             <button class="inner-companion-invite-button" type="button">Позвать!</button>
           </li>
-          <li class="inner-companion__item companion__item--first">
+          <li class="inner-companion__item companion__item">
             <div class="companion-avatar-name__wrapper">
               <img class="inner-companion__img" src="http://placehold.it/70x70" width="70" height="70" alt="аватар пользователя">
               <h3 class="inner-companion-item__name">Лариса Роговая</h3>
