--- a/source/index.html
+++ b/source/index.html
@@ -116,17 +116,17 @@
           и чем можно там заняться.
         </p>
         <ul class="popular-route__list">
-          <li class="popular-route__item popular-route__item--thai">
+          <li class="popular-route__item">
             <img class="popular-route__img popular-route__img--thai" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Тайланд</h3>
             <p class="popular-route__item-description">Джугли зовут!</p>
           </li>
-          <li class="popular-route__item popular-route__item--france">
+          <li class="popular-route__item">
             <img class="popular-route__img popular-route__img--france" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Франция</h3>
             <p class="popular-route__item-description">Трэ бьен, манифик!</p>
           </li>
-          <li class="popular-route__item popular-route__item--czech">
+          <li class="popular-route__item">
             <img class="popular-route__img popular-route__img--czech" src="http://placehold.it/270x190" width="270" height="190" alt="фото направления">
             <h3 class="popular-route__item-title">Чехия</h3>
             <p class="popular-route__item-description">Закоулки старой Европы</p>
@@ -144,7 +144,7 @@
           Теперь можно легко найти единомышленников!
         </p>
         <ul class="companions__list">
-          <li class="companion__item companion__item--first">
+          <li class="companion__item companion__item">
             <img class="companion__img" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
             <h3 class="companion__item-title">Таня Фирсова</h3>
             <p class="companion__item-tags">
@@ -158,7 +158,7 @@
               <span class="transport__icon transport__icon--walk">Пешком</span>
             </div>
           </li>
-          <li class="companion__item companion__item--second">
+          <li class="companion__item companion__item">
             <img class="companion__img" src="http://placehold.it/270x428" width="270" height="428" alt="Фото попутчика">
             <h3 class="companion__item-title">Петя Демин</h3>
             <p class="companion__item-tags">
